--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,13 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# idea files
+# compiler.xml
+# misc.xml
+# modules.xml
+# SE2.iml
+# workspace.xml
+# profiles_settings.xml
+*.iml
+*.xml
