--- a/HMSUserClient/.classpath
+++ b/HMSUserClient/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/HMSServer"/>
+	<classpathentry kind="lib" path="D:/eclipse/neon/eclipse/plugins/controlsfx-8.0.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/HMSBl"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
